Update Gradle config